[Qol]  Clean build.gradle  (#63)
* Qol- Clean build.gradle

Signed-off-by: Gulshan <kumargu@amazon.com>

* Fix java docs

Signed-off-by: Gulshan <kumargu@amazon.com>

---------

Signed-off-by: Gulshan <kumargu@amazon.com>